# oxide

./: AGENT_IDE_PROTOCOL.md  CLAUDE.md  Cargo.toml  FOUNDING_DOC.md  OXIDE_BLAME.md  README.md  clippy.toml  deny.toml  rustfmt.toml
.github/workflows/: ci.yml
crates/oxide-core/: Cargo.toml
crates/oxide-core/src/: lib.rs
src/: main.rs
